--- a/ImageCLearning/ImageCLearning.vcxproj
+++ b/ImageCLearning/ImageCLearning.vcxproj
@@ -80,11 +80,13 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ColorDetector.h" />
     <ClInclude Include="ImageOperations.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ColorDetector.cpp" />
     <ClCompile Include="ImageCLearning.cpp" />
     <ClCompile Include="ImageOperations.cpp" />
     <ClCompile Include="stdafx.cpp">
