--- a/ImageCLearning/ImageCLearning.vcxproj.filters
+++ b/ImageCLearning/ImageCLearning.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="ImageOperations.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ColorDetector.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ImageOperations.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ColorDetector.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
